# snake

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
core/: Cargo.toml
core/src/: events.rs  fruits.rs  lib.rs  snakes.rs  world.rs
frontend/: Cargo.toml
frontend/src/: main.rs  painter.rs  point_ext.rs
macros/: Cargo.toml
macros/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
