[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
random_color = { version = "1.0.0", features = ["ecolor_support"] }

core = { path = "../core" }
protocol = { path = "../protocol" }
